--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
         <meta charset="UTF-8">
             <title>智行家</title>
     </head>
-    <a style="text-align:center" href="itms-services:///?action=download-manifest&url=http://file.ecloud.virtueit.net:81/group1/M00/00/38/CrCMk1yi8eGAUtUxAAAEuw_AJt49.plist">点我下载</a>
+    <a style="text-align:center" href="itms-services:///?action=download-manifest&url=https://github.com/ryanLees/storeApp/blob/master/manifest.plist">点我下载</a>
 </html>
